Fix overlapping of #giantfox on #operators section The #giantfox div is now always positioned left:50% and the moving is done with margin-left rather than left. This keeps the fox in sync with the page content, rather than the viewport width

--- a/media/css/firefox/partners/desktop.less
+++ b/media/css/firefox/partners/desktop.less
@@ -183,8 +183,10 @@ h2 {
     height: 700px;
     background: url(/media/img/firefox/partners/firefoxos-giantfox-back.png) no-repeat 0 0 ;
     position: absolute;
+    z-index: 40;
     top: 140px;
-    left: 45%;
+    left: 50%;
+    margin-left: -70px;
     .transition(all ease 0.6s);
     #giantfox-foreground {
         position: absolute;
@@ -265,6 +267,7 @@ h2 {
 
 #os {
     .intro {
+        z-index: 50;
         padding-top: 140px;
         .span(7);
         .narrow {
